Update instructions